<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 Miranda Fluharty

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/> -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/blipView"
        tools:context="com.blipsqueak.app.NewblipActivity">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etName"
            android:singleLine="true"
            android:inputType="text|textCapSentences"
            android:layout_below="@+id/tvNameDescription"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <Button
            android:onClick="addRule"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_addpattern"
            android:id="@+id/btnAddRule"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/etName"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/blip_title"
            android:id="@+id/tvBlip"
            android:layout_below="@+id/etName"
            android:layout_alignParentStart="true"
            android:paddingTop="8dp"
            android:layout_alignBottom="@+id/btnAddRule"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/llRules"
            android:layout_below="@+id/toggleCase"
            android:layout_alignParentStart="true"
            android:paddingRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/blip_description"
            android:id="@+id/tvBlipDescription"
            android:paddingBottom="8dp"
            android:layout_below="@+id/btnAddRule"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name_title"
            android:id="@+id/tvName"
            android:gravity="center_vertical"
            android:labelFor="@id/etName"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/squeak_title"
            android:id="@+id/tvSqueak"
            android:paddingTop="8dp"
            android:layout_below="@+id/llRules"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/btnAddSound"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/squeak_description"
            android:id="@+id/tvSqueakDescription"
            android:paddingBottom="8dp"
            android:layout_below="@+id/btnAddSound"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/name_description"
            android:id="@+id/tvNameDescription"
            android:layout_below="@+id/tvName"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:onClick="requestNotificationSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_addsound"
            android:id="@+id/btnAddSound"
            android:layout_below="@+id/llRules"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/llSounds"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:paddingRight="8dp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/toggleMatch"
            android:checked="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:switchTextAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey54"
            android:textAlignment="viewStart"
            android:paddingLeft="8dp"
            android:textOn="@string/match_all"
            android:textOff="@string/match_any"
            android:paddingRight="8dp"
            android:layout_below="@+id/tvBlipDescription"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"
            android:minWidth="160dp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text=""
            android:id="@+id/toggleCase"
            android:checked="false"
            android:textOn="@string/yes"
            android:textOff="@string/no"
            android:singleLine="true"
            android:layout_below="@+id/toggleMatch"
            android:layout_alignStart="@+id/toggleMatch"
            android:layout_alignParentEnd="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey54"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/case_sensitive"
            android:id="@+id/tvCaseSensitive"
            android:paddingLeft="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/grey54"
            android:layout_alignTop="@+id/toggleCase"
            android:layout_alignBottom="@+id/toggleCase"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/toggleCase"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/squeak_description2"
            android:id="@+id/textView6"
            android:paddingBottom="8dp"
            android:layout_below="@+id/tvSqueakDescription"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/tvBlipDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/must_match"
            android:id="@+id/textView"
            android:textColor="@color/grey54"
            android:gravity="center_vertical"
            android:layout_alignTop="@+id/toggleMatch"
            android:layout_alignBottom="@+id/toggleMatch"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/toggleMatch"
            android:paddingLeft="8dp" />

    </RelativeLayout>
</ScrollView>