<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 Miranda Fluharty

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/> -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.blipsqueak.app.BackupRestore">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup"
            android:id="@+id/btnBackup"
            android:onClick="backup"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore"
            android:id="@+id/btnRestore"
            android:onClick="startRestore"
            android:layout_below="@+id/divider"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/backup_backupDescription"
            android:id="@+id/tvBackupDescription"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/btnBackup"
            android:layout_marginTop="24dp"
            android:minHeight="48dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/backup_restoreDescription"
            android:id="@+id/tvRestoreDescription"
            android:layout_below="@+id/divider"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/btnRestore"
            android:minHeight="48dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/lightgrey"
            android:id="@+id/divider"
            android:gravity="center_horizontal"
            android:layout_below="@+id/tvBackupDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/lightgrey"
            android:id="@+id/divider2"
            android:gravity="center_horizontal"
            android:layout_below="@+id/tvRestoreDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/backup_importDescription"
            android:id="@+id/tvImportDescription"
            android:layout_below="@+id/divider2"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/btnImport"
            android:minHeight="48dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importButton"
            android:id="@+id/btnImport"
            android:onClick="startImport"
            android:layout_below="@+id/divider2"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/lightgrey"
            android:id="@+id/divider3"
            android:gravity="center_horizontal"
            android:layout_below="@+id/tvImportDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/backup_exportDescription"
            android:id="@+id/tvExportDescription"
            android:layout_below="@+id/divider3"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/btnImport"
            android:layout_marginLeft="8dp"
            android:minHeight="48dp"
            android:layout_alignEnd="@+id/btnImport"
            android:gravity="center_vertical" />

    </RelativeLayout>
</ScrollView>